--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ li {
   margin-right: -750px;
   z-index: 99;
 }
-.triangle {
+/* .triangle {
   width: 0;
   height: 0;
   border-left: 300px solid rgba(219,186,175,.9);
@@ -136,7 +136,7 @@ li {
   border-bottom: 200px solid transparent;
   margin-top: -425px;
   margin-left: 20px;
- }
+ } */
 .work, .about, .contact {
   box-sizing: border-box;
   z-index: 50;
