--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
   header {
     flex-direction: column;
   }
-  .lindy, nav {
+  .name, nav {
     width: 100%;
     text-align: center;
     max-width: 200px;
